--- a/html/css/output.css
+++ b/html/css/output.css
@@ -3127,7 +3127,7 @@ details.collapse summary::-webkit-details-marker {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
   text-align: left;
-  width: 455px;
+  width: 400px;
 }
 
 .response-box {
@@ -3165,6 +3165,11 @@ details.collapse summary::-webkit-details-marker {
 .stream-status.on {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-p,oklch(var(--p)/var(--tw-bg-opacity)));
+}
+
+.collapse-title {
+  font-size: 1rem !important;
+  line-height: 1.5rem !important;
 }
 
 .table :where(th, td) {
