--- a/html/css/output.css
+++ b/html/css/output.css
@@ -3108,16 +3108,58 @@ details.collapse summary::-webkit-details-marker {
   width: 5rem;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
 .w-9 {
   width: 2.25rem;
 }
 
-.max-w-3xl {
-  max-width: 48rem;
+.w-80 {
+  width: 20rem;
 }
 
-.max-w-44 {
-  max-width: 11rem;
+.w-24 {
+  width: 6rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
+.w-32 {
+  width: 8rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-\[40rem\] {
+  width: 40rem;
+}
+
+.w-\[35rem\] {
+  width: 35rem;
+}
+
+.w-\[37rem\] {
+  width: 37rem;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .max-w-md {
@@ -3130,6 +3172,10 @@ details.collapse summary::-webkit-details-marker {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .flex-1 {
